fix width on mobile

--- a/src/assets/scss/basics/_page.scss
+++ b/src/assets/scss/basics/_page.scss
@@ -7,7 +7,7 @@ body {
 .box-container {
   padding: 20px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   gap: 20px;
 }
 
@@ -25,5 +25,6 @@ body {
 @media screen and (min-width: 768px) {
   .box-container {
     padding: 20px 50px 50px 50px;
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
   }
 }
