--- a/src/assets/scss/boxes/_fourth.scss
+++ b/src/assets/scss/boxes/_fourth.scss
@@ -52,7 +52,8 @@
 
   &__inst {
     position: sticky;
-    top: 90%;
+    top: 50%;
+    font-size: 2rem;
   }
 
   &__headline {
